# tree_man

./: Cargo.toml  README.md
benches/: benchmarks.rs  candles.rs  candles_parallel.rs  compare.rs
src/: allocator.rs  bit_index.rs  errors.rs  filter.rs  group.rs  index.rs  lib.rs  main.rs  model.rs  result.rs
src/index/: bit.rs  decimal.rs  field.rs  float.rs  storage.rs  text.rs
tests/: filter_tests.rs  group_tests.rs  integration_tests.rs  memory_leak_tests.rs  text_index.rs
