[package]
name = "tree_man"
version = "0.2.0"
edition = "2024"
authors = ["Bieliaiev Vladyslav <vladbpython@gmail.com>"]

[dependencies]
arc-swap = "1.6"
parking_lot = "0.12.5"
rayon = "1.8"
serial_test = "3.2.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
serial_test = "3.2.0"


[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"
