[package]
name = "tree_man"
version = "0.3.0"
edition = "2024"
authors = ["Bieliaiev Vladyslav <vladbpython@gmail.com>"]

[dependencies]
arc-swap = "1.6"
parking_lot = "0.12.5"
rayon = "1.8"
roaring = "0.11.2"
rust_decimal = "1.39.0"

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }
serial_test = "3.2.0"
im = "15.1.0"
memory-stats = "1.2.0"
rand = "0.9.2"
rpds = "1.2.0"
rust_decimal_macros = "1.39.0"

[profile.bench]
debug = true

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"

[[bench]]
name = "compare"
harness = false
path = "benches/compare.rs"

[[bench]]
name = "candles"
harness = false
path = "benches/candles.rs"

[[bench]]
debug = true
name = "candles_parallel"
harness = false
path = "benches/candles_parallel.rs"
