[package]
name = "tree_man"
version = "0.4.0"
edition = "2024"
authors = ["Bieliaiev Vladyslav <vladbpython@gmail.com>"]

[dependencies]
ahash = "0.8.12"
arc-swap = "1.6"
bitvec = "1.0.1"
dashmap = { version = "6.1"} 
dhat = {version = "0.3", optional = true}
memchr = "2.7.6"
ordered-float = "5.1.0"
parking_lot = "0.12.5"
rayon = "1.8"
roaring = "0.11.2"
rust_decimal = "1.39.0"
smallvec = "1.15.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["stats"]}

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = { version = "0.1", default-features = false, optional = true }


[features]
default = []
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl"]
mimalloc-allocator = ["mimalloc"]
dhat-heap = ["dhat"]

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }
serial_test = "3.2.0"
memory-stats = "1.2.0"
rand = "0.9.2"
rust_decimal_macros = "1.39.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"

[[bench]]
name = "compare"
harness = false
path = "benches/compare.rs"